--- a/README
+++ b/README
@@ -1,16 +1,3 @@
----
-1-
-copy server-setup repository to server's to /home/ucomm
+### ANSIBLE PACKAGE MANAGER
+This is a software manager system desinged for working with a linux server
 
-2- 
-$ sudo -u ucomm -i
-
-3- 
-if it is the very first time setting up the server:
-$ cd; ksh server-setup/installer_scripts/init.ksh
-
-4-
-$ cd $PROOT; ksh $PROOT/src/install_scripts/install_all.ksh
-
-5- 
-don't forget to copy .war file into 
